--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <img src="/img/icon.svg" alt="" />
+        <div class="categories">
+          <a href="#">BANK</a>
+          <a href="#">BUSINESS</a>
+          <a href="#">INVESTMENTS</a>
+          <a href="#">INSURANCE</a>
+          <a href="#">MOBILE</a>
+          <a href="#">TRAVELS</a>
+          <a href="#">ENTERTAINMENT</a>
+        </div>
+        <div class="sign_out">
+          <p>SIGN OUT</p>
+        </div>
+      </div>
+      <div class="main"></div>
+    </div>
+  </body>
 </html>
