build main html and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header">
         <img src="/img/icon.svg" alt="" />
         <div class="categories">
-          <a href="#">BANK</a>
+          <a href="#" style="color: black">BANK</a>
           <a href="#">BUSINESS</a>
           <a href="#">INVESTMENTS</a>
           <a href="#">INSURANCE</a>
@@ -26,11 +26,39 @@
           <a href="#">TRAVELS</a>
           <a href="#">ENTERTAINMENT</a>
         </div>
-        <div class="sign_out">
-          <p>SIGN OUT</p>
+        <div class="sign_in">
+          <p>SIGN IN</p>
         </div>
       </div>
-      <div class="main"></div>
+      <div class="main">
+        <div class="just_text">
+          <p>Currency converter online</p>
+        </div>
+        <div class="show_valuta_place">
+          <div class="left">
+            <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
+            <p>I have</p>
+            <div class="valutes_left">
+              <p>RUB</p>
+              <p>USD</p>
+              <p>EUR</p>
+              <p>GBP</p>
+            </div>
+            <input type="text" />
+          </div>
+          <div class="right">
+            <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
+            <p>I want to buy</p>
+            <div class="valutes_right">
+              <p>RUB</p>
+              <p>USD</p>
+              <p>EUR</p>
+              <p>GBP</p>
+            </div>
+            <input type="text" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
