--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I have</p>
             <div class="valutes_left">
-              <p>RUB</p>
+              <p>AZN</p>
               <p>USD</p>
               <p>EUR</p>
               <p>GBP</p>
             </div>
-            <input type="text" />
+            <input type="text" placeholder="salam" />
           </div>
           <div class="right">
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I want to buy</p>
             <div class="valutes_right">
-              <p>RUB</p>
+              <p>AZN</p>
               <p>USD</p>
               <p>EUR</p>
               <p>GBP</p>
