--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I have</p>
             <div class="valutes_left">
-              <p>AZN</p>
-              <p>USD</p>
-              <p>EUR</p>
-              <p>GBP</p>
+              <p class="left_AZN">AZN</p>
+              <p class="left_USD">USD</p>
+              <p class="left_EUR">EUR</p>
+              <p class="left_GBP">GBP</p>
             </div>
             <input type="text" placeholder="salam" />
           </div>
@@ -50,10 +50,10 @@
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I want to buy</p>
             <div class="valutes_right">
-              <p>AZN</p>
-              <p>USD</p>
-              <p>EUR</p>
-              <p>GBP</p>
+              <p class="right_AZN">AZN</p>
+              <p class="right_USD">USD</p>
+              <p class="right_EUR">EUR</p>
+              <p class="right_GBP">GBP</p>
             </div>
             <input type="text" />
           </div>
