--- a/index.html
+++ b/index.html
@@ -39,26 +39,27 @@
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I have</p>
             <div class="valutes_left">
-              <p class="left_AZN">AZN</p>
+              <p class="active">AZN</p>
               <p class="left_USD">USD</p>
               <p class="left_EUR">EUR</p>
               <p class="left_GBP">GBP</p>
             </div>
-            <input type="text" placeholder="salam" />
+            <input type="text" class="left_input" />
           </div>
           <div class="right">
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
             <p>I want to buy</p>
             <div class="valutes_right">
               <p class="right_AZN">AZN</p>
-              <p class="right_USD">USD</p>
+              <p class="active">USD</p>
               <p class="right_EUR">EUR</p>
               <p class="right_GBP">GBP</p>
             </div>
-            <input type="text" />
+            <input type="text" class="right_input" />
           </div>
         </div>
       </div>
     </div>
+    <script src="/javascript.js"></script>
   </body>
 </html>
