--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
               <p class="left_EUR">EUR</p>
               <p class="left_GBP">GBP</p>
             </div>
-            <input type="text" class="left_input" />
+            <div class="left_input_div">
+              <input type="text" class="left_input" />
+              <p>left</p>
+            </div>
           </div>
           <div class="right">
             <!-- left vəya right yazmaq lazımdırmı?bəlkə class adları eyni olsa olar.Bunu sonda test et-->
@@ -55,7 +58,10 @@
               <p class="right_EUR">EUR</p>
               <p class="right_GBP">GBP</p>
             </div>
-            <input type="text" class="right_input" />
+            <div class="right_input_div">
+              <input type="text" class="right_input" />
+              <p>right</p>
+            </div>
           </div>
         </div>
       </div>
